// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoneIngresses.vue renders snapshot when multizone 1`] = `
<div>
  <div
    class="zoneingresses"
  >
    
    <!-- Zone CPs information for when Multicluster is enabled -->
    <div
      class="component-frame"
    >
      
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <!-- controls -->
        <div
          class="data-table-controls mb-2"
        >
          
          
          <button
            class="small rounded primary k-button ml-2 refresh-button"
            data-v-29036f3a=""
            type="button"
          >
            
            <!---->
            
            
            <div
              class="refresh-icon"
            >
              <svg
                viewBox="0 0 36 36"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#fff"
                  fill-rule="nonzero"
                >
                  <path
                    d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
                  />
                </g>
              </svg>
            </div>
            <span>
              Refresh
            </span>
            
            <!---->
          </button>
        </div>
        <div
          class="data-overview-content"
        >
          <!-- data -->
          <div
            class="data-overview-table"
          >
            <div
              class="micro-table"
              data-v-77421f6a=""
              is-clickable=""
            >
              <section
                class="k-table-wrapper"
                data-v-77421f6a=""
              >
                <table
                  class="has-hover is-clickable k-table"
                  data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                  data-v-77421f6a=""
                >
                  <thead
                    class=""
                    data-v-77421f6a=""
                  >
                    <tr
                      class=""
                      data-v-77421f6a=""
                    >
                      
                      <th
                        class=""
                        data-v-77421f6a=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-77421f6a=""
                        >
                          
                          <span
                            class="sr-only"
                            data-v-77421f6a=""
                          >
                            actions
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-77421f6a=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-77421f6a=""
                        >
                          
                          <span
                            class=""
                            data-v-77421f6a=""
                          >
                            Status
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-77421f6a=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-77421f6a=""
                        >
                          
                          <span
                            class=""
                            data-v-77421f6a=""
                          >
                            Name
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      
                    </tr>
                  </thead>
                  <tbody
                    data-v-77421f6a=""
                  >
                    
                    <tr
                      data-v-77421f6a=""
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        data-v-77421f6a=""
                      >
                        
                        <a
                          class="data-table-action-link is-active"
                        >
                          <span
                            class="action-link__active-state"
                          >
                             ✓ 
                            <span
                              class="sr-only"
                            >
                               Selected 
                            </span>
                          </span>
                        </a>
                        
                      </td>
                      <td
                        data-v-77421f6a=""
                      >
                        
                        <div
                          class="entity-status"
                        >
                          <span
                            class="entity-status__dot"
                          />
                          <span
                            class="entity-status__label"
                          >
                            Online
                          </span>
                        </div>
                        
                      </td>
                      <td
                        data-v-77421f6a=""
                      >
                        
                        zone-ingress-1
                        
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
                <!---->
              </section>
            </div>
            <div
              class="pagination"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!-- empty state if no items are found -->
          <!--v-if-->
          <!-- additional page content -->
          <!--v-if-->
        </div>
        <!-- loading state -->
        <!--v-if-->
        <!-- error has occurred -->
        <!--v-if-->
      </div>
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        <header
          class="tab__header"
        >
          
          <div>
            <h3>
               Zone Ingress: zone-ingress-1
            </h3>
          </div>
          <div>
            <div
              data-testid="entity-url-control"
            >
              
              <div
                aria-controls="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                aria-expanded="false"
                data-v-9bbde9b2=""
                id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                role="button"
              >
                
                <button
                  class="small rounded outline k-button"
                  data-v-29036f3a=""
                  type="button"
                >
                  
                  <span
                    class="kong-icon-externalLink kong-icon"
                    data-v-637de6fa=""
                  >
                    <svg
                      height="12"
                      role="img"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      
  
                      <title>
                        External Link
                      </title>
                      
  
                      <path
                        d="M8.24308 1.5C7.83269 1.5 7.5 1.16710138 7.5.75c0-.41421356.33823-.75.74308-.75h3.00568C11.6666 0 12 .336341 12 .75123866v3.00567786C12 4.1673102 11.6671 4.5 11.25 4.5c-.41421 0-.75-.3382314-.75-.74308348V2.625L6.53246 6.59254c-.28982.2898217-.76955.2953689-1.06202.0029022l-.06588-.0658844c-.29098-.2909742-.29117-.7679483.0029-1.0620178L9.375 1.5H8.24308zm-6.74753 0C.67089 1.5 0 2.1695784 0 2.99554521v7.50890959C0 11.3291147.66958 12 1.49555 12h7.5089C9.82911 12 10.5 11.3304216 10.5 10.5044548V6.75H9v3.75H1.5V3h3.75V1.5H1.49555z"
                        fill="#A3BBCC"
                        fill-rule="evenodd"
                      />
                      

                    </svg>
                    

                  </span>
                  
                  
                   Copy URL
                  
                  <!---->
                </button>
                
                <transition-stub
                  data-v-9bbde9b2=""
                >
                  <div
                    class="k-popover"
                    data-v-9bbde9b2=""
                    id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    role="region"
                    style="width: 200px; max-width: 350px; max-height: auto; display: none;"
                  >
                    <!---->
                    <div
                      class="k-popover-content"
                      data-v-9bbde9b2=""
                    >
                      
                      <div>
                        <p>
                          URL copied to clipboard!
                        </p>
                      </div>
                      
                    </div>
                    <!---->
                  </div>
                </transition-stub>
              </div>
              
            </div>
          </div>
          
        </header>
        <div
          class="tab__content-container"
        >
          <div
            class="k-tabs"
            data-v-6bcd6661=""
          >
            <ul
              aria-label="ktabs"
              data-v-6bcd6661=""
              role="tablist"
            >
              
              <li
                aria-controls="panel-0"
                aria-selected="true"
                class="active tab-item"
                data-v-6bcd6661=""
                id="overview-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-6bcd6661=""
                >
                  
                  Overview
                  
                </a>
              </li>
              <li
                aria-controls="panel-1"
                aria-selected="false"
                class="tab-item"
                data-v-6bcd6661=""
                id="insights-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-6bcd6661=""
                >
                  
                  Zone Ingress Insights
                  
                </a>
              </li>
              <li
                aria-controls="panel-2"
                aria-selected="false"
                class="tab-item"
                data-v-6bcd6661=""
                id="xds-configuration-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-6bcd6661=""
                >
                  
                  XDS Configuration
                  
                </a>
              </li>
              <li
                aria-controls="panel-3"
                aria-selected="false"
                class="tab-item"
                data-v-6bcd6661=""
                id="envoy-stats-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-6bcd6661=""
                >
                  
                  Stats
                  
                </a>
              </li>
              <li
                aria-controls="panel-4"
                aria-selected="false"
                class="tab-item"
                data-v-6bcd6661=""
                id="envoy-clusters-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-6bcd6661=""
                >
                  
                  Clusters
                  
                </a>
              </li>
              
            </ul>
            
            <div
              aria-labelledby="overview-tab"
              class="tab-container"
              data-v-6bcd6661=""
              id="panel-0"
              role="tabpanel"
              tabindex="0"
            >
              
              
              <div>
                <div
                  class="label-list-content"
                >
                  <section
                    aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    class="noBorder kong-card"
                    data-v-5adb63fa=""
                  >
                    <!---->
                    <!---->
                    <div
                      class="k-card-content d-flex"
                      data-v-5adb63fa=""
                    >
                      <div
                        class="k-card-body"
                        data-v-5adb63fa=""
                        id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                      >
                        
                        <div
                          class="label-list__col-wrapper multi-col"
                        >
                          
                          <div>
                            <ul>
                              
                              <li>
                                <h4>
                                  type
                                </h4>
                                <p>
                                  ZoneIngressOverview
                                </p>
                              </li>
                              <li>
                                <h4>
                                  name
                                </h4>
                                <p>
                                  zone-ingress-1
                                </p>
                              </li>
                              
                            </ul>
                          </div>
                          
                        </div>
                        
                      </div>
                      <!---->
                    </div>
                  </section>
                </div>
                <!-- loading state -->
                <!--v-if-->
                <!-- no data to load -->
                <!--v-if-->
                <!-- error -->
                <!--v-if-->
              </div>
              
              
            </div>
            <div
              aria-labelledby="insights-tab"
              class="tab-container"
              data-v-6bcd6661=""
              id="panel-1"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="xds-configuration-tab"
              class="tab-container"
              data-v-6bcd6661=""
              id="panel-2"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-stats-tab"
              class="tab-container"
              data-v-6bcd6661=""
              id="panel-3"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-clusters-tab"
              class="tab-container"
              data-v-6bcd6661=""
              id="panel-4"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            
          </div>
          <div>
            <!-- loading state -->
            <!--v-if-->
            <!-- error has occurred -->
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`ZoneIngresses.vue renders snapshot when no multizone 1`] = `
<div>
  <div
    class="zoneingresses"
  >
    
    <!-- Zone CPs information for when Multicluster is enabled -->
    <div
      class="component-frame"
    >
      
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <!-- controls -->
        <div
          class="data-table-controls mb-2"
        >
          
          
          <button
            class="small rounded primary k-button ml-2 refresh-button"
            data-v-29036f3a=""
            type="button"
          >
            
            <!---->
            
            
            <div
              class="refresh-icon"
            >
              <svg
                viewBox="0 0 36 36"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#fff"
                  fill-rule="nonzero"
                >
                  <path
                    d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
                  />
                </g>
              </svg>
            </div>
            <span>
              Refresh
            </span>
            
            <!---->
          </button>
        </div>
        <div
          class="data-overview-content"
        >
          <!-- data -->
          <div
            class="data-overview-table"
          >
            <div
              class="micro-table"
              data-v-77421f6a=""
              is-clickable=""
            >
              <section
                class="k-table-wrapper"
                data-v-77421f6a=""
              >
                <table
                  class="has-hover is-clickable k-table"
                  data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                  data-v-77421f6a=""
                >
                  <thead
                    class=""
                    data-v-77421f6a=""
                  >
                    <tr
                      class=""
                      data-v-77421f6a=""
                    >
                      
                      <th
                        class=""
                        data-v-77421f6a=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-77421f6a=""
                        >
                          
                          <span
                            class="sr-only"
                            data-v-77421f6a=""
                          >
                            actions
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-77421f6a=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-77421f6a=""
                        >
                          
                          <span
                            class=""
                            data-v-77421f6a=""
                          >
                            Status
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                        data-v-77421f6a=""
                      >
                        <span
                          class="d-flex align-items-center"
                          data-v-77421f6a=""
                        >
                          
                          <span
                            class=""
                            data-v-77421f6a=""
                          >
                            Name
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      
                    </tr>
                  </thead>
                  <tbody
                    data-v-77421f6a=""
                  >
                    
                    <tr
                      data-v-77421f6a=""
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        data-v-77421f6a=""
                      >
                        
                        <a
                          class="data-table-action-link is-active"
                        >
                          <span
                            class="action-link__active-state"
                          >
                             ✓ 
                            <span
                              class="sr-only"
                            >
                               Selected 
                            </span>
                          </span>
                        </a>
                        
                      </td>
                      <td
                        data-v-77421f6a=""
                      >
                        
                        <div
                          class="entity-status"
                        >
                          <span
                            class="entity-status__dot"
                          />
                          <span
                            class="entity-status__label"
                          >
                            Online
                          </span>
                        </div>
                        
                      </td>
                      <td
                        data-v-77421f6a=""
                      >
                        
                        zone-ingress-1
                        
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
                <!---->
              </section>
            </div>
            <div
              class="pagination"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!-- empty state if no items are found -->
          <!--v-if-->
          <!-- additional page content -->
          <!--v-if-->
        </div>
        <!-- loading state -->
        <!--v-if-->
        <!-- error has occurred -->
        <!--v-if-->
      </div>
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        <header
          class="tab__header"
        >
          
          <div>
            <h3>
               Zone Ingress: zone-ingress-1
            </h3>
          </div>
          <div>
            <div
              data-testid="entity-url-control"
            >
              
              <div
                aria-controls="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                aria-expanded="false"
                data-v-9bbde9b2=""
                id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                role="button"
              >
                
                <button
                  class="small rounded outline k-button"
                  data-v-29036f3a=""
                  type="button"
                >
                  
                  <span
                    class="kong-icon-externalLink kong-icon"
                    data-v-637de6fa=""
                  >
                    <svg
                      height="12"
                      role="img"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      
  
                      <title>
                        External Link
                      </title>
                      
  
                      <path
                        d="M8.24308 1.5C7.83269 1.5 7.5 1.16710138 7.5.75c0-.41421356.33823-.75.74308-.75h3.00568C11.6666 0 12 .336341 12 .75123866v3.00567786C12 4.1673102 11.6671 4.5 11.25 4.5c-.41421 0-.75-.3382314-.75-.74308348V2.625L6.53246 6.59254c-.28982.2898217-.76955.2953689-1.06202.0029022l-.06588-.0658844c-.29098-.2909742-.29117-.7679483.0029-1.0620178L9.375 1.5H8.24308zm-6.74753 0C.67089 1.5 0 2.1695784 0 2.99554521v7.50890959C0 11.3291147.66958 12 1.49555 12h7.5089C9.82911 12 10.5 11.3304216 10.5 10.5044548V6.75H9v3.75H1.5V3h3.75V1.5H1.49555z"
                        fill="#A3BBCC"
                        fill-rule="evenodd"
                      />
                      

                    </svg>
                    

                  </span>
                  
                  
                   Copy URL
                  
                  <!---->
                </button>
                
                <transition-stub
                  data-v-9bbde9b2=""
                >
                  <div
                    class="k-popover"
                    data-v-9bbde9b2=""
                    id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    role="region"
                    style="width: 200px; max-width: 350px; max-height: auto; display: none;"
                  >
                    <!---->
                    <div
                      class="k-popover-content"
                      data-v-9bbde9b2=""
                    >
                      
                      <div>
                        <p>
                          URL copied to clipboard!
                        </p>
                      </div>
                      
                    </div>
                    <!---->
                  </div>
                </transition-stub>
              </div>
              
            </div>
          </div>
          
        </header>
        <div
          class="tab__content-container"
        >
          <div
            class="k-tabs"
            data-v-6bcd6661=""
          >
            <ul
              aria-label="ktabs"
              data-v-6bcd6661=""
              role="tablist"
            >
              
              <li
                aria-controls="panel-0"
                aria-selected="true"
                class="active tab-item"
                data-v-6bcd6661=""
                id="overview-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-6bcd6661=""
                >
                  
                  Overview
                  
                </a>
              </li>
              <li
                aria-controls="panel-1"
                aria-selected="false"
                class="tab-item"
                data-v-6bcd6661=""
                id="insights-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-6bcd6661=""
                >
                  
                  Zone Ingress Insights
                  
                </a>
              </li>
              <li
                aria-controls="panel-2"
                aria-selected="false"
                class="tab-item"
                data-v-6bcd6661=""
                id="xds-configuration-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-6bcd6661=""
                >
                  
                  XDS Configuration
                  
                </a>
              </li>
              <li
                aria-controls="panel-3"
                aria-selected="false"
                class="tab-item"
                data-v-6bcd6661=""
                id="envoy-stats-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-6bcd6661=""
                >
                  
                  Stats
                  
                </a>
              </li>
              <li
                aria-controls="panel-4"
                aria-selected="false"
                class="tab-item"
                data-v-6bcd6661=""
                id="envoy-clusters-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-6bcd6661=""
                >
                  
                  Clusters
                  
                </a>
              </li>
              
            </ul>
            
            <div
              aria-labelledby="overview-tab"
              class="tab-container"
              data-v-6bcd6661=""
              id="panel-0"
              role="tabpanel"
              tabindex="0"
            >
              
              
              <div>
                <div
                  class="label-list-content"
                >
                  <section
                    aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                    class="noBorder kong-card"
                    data-v-5adb63fa=""
                  >
                    <!---->
                    <!---->
                    <div
                      class="k-card-content d-flex"
                      data-v-5adb63fa=""
                    >
                      <div
                        class="k-card-body"
                        data-v-5adb63fa=""
                        id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                      >
                        
                        <div
                          class="label-list__col-wrapper multi-col"
                        >
                          
                          <div>
                            <ul>
                              
                              <li>
                                <h4>
                                  type
                                </h4>
                                <p>
                                  ZoneIngressOverview
                                </p>
                              </li>
                              <li>
                                <h4>
                                  name
                                </h4>
                                <p>
                                  zone-ingress-1
                                </p>
                              </li>
                              
                            </ul>
                          </div>
                          
                        </div>
                        
                      </div>
                      <!---->
                    </div>
                  </section>
                </div>
                <!-- loading state -->
                <!--v-if-->
                <!-- no data to load -->
                <!--v-if-->
                <!-- error -->
                <!--v-if-->
              </div>
              
              
            </div>
            <div
              aria-labelledby="insights-tab"
              class="tab-container"
              data-v-6bcd6661=""
              id="panel-1"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="xds-configuration-tab"
              class="tab-container"
              data-v-6bcd6661=""
              id="panel-2"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-stats-tab"
              class="tab-container"
              data-v-6bcd6661=""
              id="panel-3"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-clusters-tab"
              class="tab-container"
              data-v-6bcd6661=""
              id="panel-4"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            
          </div>
          <div>
            <!-- loading state -->
            <!--v-if-->
            <!-- error has occurred -->
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`ZoneIngresses.vue renders zoneingress insights 1`] = `
<div
  class="tab-container"
  data-testid="tab-container"
>
  <header
    class="tab__header"
  >
    
    <div>
      <h3>
         Zone Ingress: zone-ingress-1
      </h3>
    </div>
    <div>
      <div
        data-testid="entity-url-control"
      >
        
        <div
          aria-controls="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          aria-expanded="false"
          data-v-9bbde9b2=""
          id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          role="button"
        >
          
          <button
            class="small rounded outline k-button"
            data-v-29036f3a=""
            type="button"
          >
            
            <span
              class="kong-icon-externalLink kong-icon"
              data-v-637de6fa=""
            >
              <svg
                height="12"
                role="img"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                
  
                <title>
                  External Link
                </title>
                
  
                <path
                  d="M8.24308 1.5C7.83269 1.5 7.5 1.16710138 7.5.75c0-.41421356.33823-.75.74308-.75h3.00568C11.6666 0 12 .336341 12 .75123866v3.00567786C12 4.1673102 11.6671 4.5 11.25 4.5c-.41421 0-.75-.3382314-.75-.74308348V2.625L6.53246 6.59254c-.28982.2898217-.76955.2953689-1.06202.0029022l-.06588-.0658844c-.29098-.2909742-.29117-.7679483.0029-1.0620178L9.375 1.5H8.24308zm-6.74753 0C.67089 1.5 0 2.1695784 0 2.99554521v7.50890959C0 11.3291147.66958 12 1.49555 12h7.5089C9.82911 12 10.5 11.3304216 10.5 10.5044548V6.75H9v3.75H1.5V3h3.75V1.5H1.49555z"
                  fill="#A3BBCC"
                  fill-rule="evenodd"
                />
                

              </svg>
              

            </span>
            
            
             Copy URL
            
            <!---->
          </button>
          
          <transition-stub
            data-v-9bbde9b2=""
          >
            <div
              class="k-popover"
              data-v-9bbde9b2=""
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
              role="region"
              style="width: 200px; max-width: 350px; max-height: auto; display: none;"
            >
              <!---->
              <div
                class="k-popover-content"
                data-v-9bbde9b2=""
              >
                
                <div>
                  <p>
                    URL copied to clipboard!
                  </p>
                </div>
                
              </div>
              <!---->
            </div>
          </transition-stub>
        </div>
        
      </div>
    </div>
    
  </header>
  <div
    class="tab__content-container"
  >
    <div
      class="k-tabs"
      data-v-6bcd6661=""
    >
      <ul
        aria-label="ktabs"
        data-v-6bcd6661=""
        role="tablist"
      >
        
        <li
          aria-controls="panel-0"
          aria-selected="false"
          class="tab-item"
          data-v-6bcd6661=""
          id="overview-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-6bcd6661=""
          >
            
            Overview
            
          </a>
        </li>
        <li
          aria-controls="panel-1"
          aria-selected="true"
          class="active tab-item"
          data-v-6bcd6661=""
          id="insights-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-6bcd6661=""
          >
            
            Zone Ingress Insights
            
          </a>
        </li>
        <li
          aria-controls="panel-2"
          aria-selected="false"
          class="tab-item"
          data-v-6bcd6661=""
          id="xds-configuration-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-6bcd6661=""
          >
            
            XDS Configuration
            
          </a>
        </li>
        <li
          aria-controls="panel-3"
          aria-selected="false"
          class="tab-item"
          data-v-6bcd6661=""
          id="envoy-stats-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-6bcd6661=""
          >
            
            Stats
            
          </a>
        </li>
        <li
          aria-controls="panel-4"
          aria-selected="false"
          class="tab-item"
          data-v-6bcd6661=""
          id="envoy-clusters-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-6bcd6661=""
          >
            
            Clusters
            
          </a>
        </li>
        
      </ul>
      
      <div
        aria-labelledby="overview-tab"
        class="tab-container"
        data-v-6bcd6661=""
        id="panel-0"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="insights-tab"
        class="tab-container"
        data-v-6bcd6661=""
        id="panel-1"
        role="tabpanel"
        tabindex="0"
      >
        
        
        <section
          aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          class="noBorder kong-card"
          data-v-5adb63fa=""
        >
          <!---->
          <!---->
          <div
            class="k-card-content d-flex"
            data-v-5adb63fa=""
          >
            <div
              class="k-card-body"
              data-v-5adb63fa=""
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
            >
              
              <ul
                class="accordion"
              >
                
                
                <li
                  class="accordion-item relative border-b py-2 active"
                >
                  <button
                    aria-expanded="true"
                    class="accordion-item-header"
                  >
                    <!-- This slot will display header -->
                    
                    <h4
                      class="text-lg font-medium"
                    >
                      <span
                        class="color-green-400"
                      >
                         Connect time: 2021-07-13T08:41:04.556796688Z
                      </span>
                      <!--v-if-->
                    </h4>
                    
                  </button>
                  <transition-stub>
                    <div
                      class="px-4"
                    >
                      <!-- This slot will display whole content -->
                      
                      <div>
                        <div>
                          <h5
                            class="overview-tertiary-title"
                          >
                             General Information: 
                          </h5>
                          <ul>
                            <!--v-if-->
                            <li>
                              <strong>
                                Control Plane Instance ID:
                              </strong>
                                
                              <span
                                class="mono"
                              >
                                kuma-control-plane-84f5589874-nmspq-0867
                              </span>
                            </li>
                            <li>
                              <strong>
                                Last Connected:
                              </strong>
                                2021-07-13T08:41:04.556796688Z
                            </li>
                            <!--v-if-->
                          </ul>
                        </div>
                        <div>
                          <ul
                            class="overview-stat-grid"
                          >
                            
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Cds: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Eds: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    2
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Lds: 
                              </h6>
                              <ul>
                                
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                    
                                  <span
                                    class="mono"
                                  >
                                    3
                                  </span>
                                </li>
                                
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                Rds: 
                              </h6>
                              <ul>
                                
                                
                              </ul>
                            </li>
                            
                          </ul>
                        </div>
                      </div>
                      
                    </div>
                  </transition-stub>
                </li>
                
                
              </ul>
              
            </div>
            <!---->
          </div>
        </section>
        
        
      </div>
      <div
        aria-labelledby="xds-configuration-tab"
        class="tab-container"
        data-v-6bcd6661=""
        id="panel-2"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="envoy-stats-tab"
        class="tab-container"
        data-v-6bcd6661=""
        id="panel-3"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="envoy-clusters-tab"
        class="tab-container"
        data-v-6bcd6661=""
        id="panel-4"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      
    </div>
    <div>
      <!-- loading state -->
      <!--v-if-->
      <!-- error has occurred -->
      <!--v-if-->
    </div>
  </div>
</div>
`;
